--- a/index.cfg
+++ b/index.cfg
@@ -26,6 +26,14 @@ content =
     <!--[if gt IE 8]><!-->
         <link rel="stylesheet" href="css/blog.css">
     <!--<![endif]-->
+    <script type="text/x-mathjax-config">
+      MathJax.Hub.Config({
+          tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]},
+          processClass: "mathjax",
+          ignoreClass: "tex2jax_ignore|nomathjax"
+      });
+      MathJax.Hub.Config({ TeX: { equationNumbers: {autoNumber: "all"} } });
+    </script>
     <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 [body]
 begin = <body class="nomathjax">
