--- a/index.cfg
+++ b/index.cfg
@@ -35,6 +35,7 @@ content =
       MathJax.Hub.Config({ TeX: { equationNumbers: {autoNumber: "all"} } });
     </script>
     <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+    <script src="https://use.fontawesome.com/62e0af05fc.js"></script>
 [body]
 begin = <body class="nomathjax">
     <div id="layout">
