Fix a bug in MathJax inline equation.

--- a/index.cfg
+++ b/index.cfg
@@ -6,7 +6,7 @@ content =
 mathjax = <script>
             MathJax = {
                 tex: {
-                    inlineMath: [['\\\\(', '\\\\)']],
+                    inlineMath: [['\\(', '\\)']],
                     tags: "none"
                 }
             };
